fixed player info display on mobile

--- a/src/player/Player.css
+++ b/src/player/Player.css
@@ -102,9 +102,6 @@
 
 
     #menu {
-        align-self: center;
-        flex: 1;
-        text-align: right;
         margin-right: 0;
     }
 
@@ -117,8 +114,9 @@
     }
 
     .player-info {
-        margin-top: 0.9em;
-        margin-left: 1em;
+        margin-top: 0.4em;
+        flex: 5;
+        margin-left: 0.4em;
     }
 }
 
